syntax = "proto3";

option csharp_namespace = "DbData.Protos";
package dbdata;
import "google/protobuf/wrappers.proto";

message EmptyRequest {
    
}
message IdRequest {
    string id = 1;
	google.protobuf.StringValue subId = 2;
}
message IdLangRequest {
    string id = 1;
	google.protobuf.StringValue subId = 2;
	google.protobuf.StringValue langCode = 3;
}
message KeyValuePair{
	string key = 1;
	string value = 2;
}

message ResponseMessage {
	int32 status = 1;
	string statusCode = 2;
	string message = 3;
	string data = 4;
}

message PagingType {
	int32 start = 1;
	int32 length = 2;
}
message SortType {
	string columnName = 1;
	string direction = 2;
}

message TagStruct {
	google.protobuf.StringValue id = 1;
	string name = 2;
}